reports/week6_4.log
Traceback (most recent call last):
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\vikbhat\anaconda3\envs\book\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\vikbhat\anaconda3\envs\book\lib\site-packages\nbclient\client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
class Poly(val terms_ : Map[Int, Double]) {
    def this(bindings: (Int, Double)*) = this(bindings.toMap)
    val terms = terms_ withDefaultValue 0.0 
    def +(other: Poly): Poly = (other.terms foldLeft ???)(addTerm)
    def addTerms()
    override def toString = (for((exp, coeff) <- terms.toList.sorted.reverse) yield coeff + "x^" +exp) mkString " + "
}
------------------

<console>:19: error: not found: value addTerm
           def +(other: Poly): Poly = (other.terms foldLeft ???)(addTerm)
                                                                 ^

<console>: 19: error: not found: value addTerm

